--- a/public/members.html
+++ b/public/members.html
@@ -5,12 +5,23 @@
   <title>Passport Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="/styles/style.css" />
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  
+  <nav class="navbar fixed-top navbar-dark navbar-expand-md navbar-inverse text-white">
+    <a class="navbar-brand" href="/logout">
+      Logout
+    </a>
+  </nav>
+  <br>
+  <br>
+
+  </br>
+  <!-- <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/logout">
@@ -18,15 +29,31 @@
       </a>
     </div>
   </div>
-</nav>
+</nav> -->
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1>Dashboard</h1>
+        <h1 class="dash" style="color: aquamarine;">Dashboard</h1>
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
     </div>
   </div>
+
+  <!--sidebar start-->
+  <div class="sidebar">
+    <div class="profile_info">
+      <img src="img/carousel/slide1.jpeg"  class="profile_image" alt="">
+      <h4>Impatient T-Shirts</h4>
+    </div>
+    <a href="#"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
+    <a href="product-manager.html"><i class="fas fa-cogs"></i><span>Add Products</span></a>
+    <!-- <a href="#"><i class="fas fa-table"></i><span>Delete Product</span></a> -->
+    <a href="blog.html"><i class="fas fa-sliders-h"></i><span>View Product</span></a>
+  </div>
+  <!--sidebar end-->
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
