--- a/public/blog.html
+++ b/public/blog.html
@@ -26,8 +26,9 @@
       </div>
     </div>
     <div class="row" style="margin-top: 20px;">
-      <div class="col-md-12 blog-container">
-      </div>
+      <div class="col-md-12 blog-container" style="margin-bottom: 20px;">
+        </div>
+
     </div>
   </div>
   <!-- Custom Script -->
