--- a/public/cms.html
+++ b/public/cms.html
@@ -28,13 +28,23 @@
 			<div class="col-md-6 offset-md-3">
 				<form id="cms">
 					<div class="form-group">
-						<label for="title">Vendor Name:</label>
+						<label for="title">Product Name:</label>
 						<input placeholder="Add Product Name" type="text" class="form-control" id="title">
 						<br />
 						<label for="body">Describe Your Product:</label>
-						<textarea placeholder="comments" class="form-control" rows="10" id="body"></textarea>
+						<textarea placeholder="size:	price:	picture url" class="form-control" rows="5" id="body"></textarea>
+
+						<!--<label for="body">Product Pic:</label>
+						<textarea placeholder="add pic url" class="form-control" rows="3" id="body"></textarea>
+
+						<label for="body">Product Size:</label>
+						<textarea placeholder="add size" class="form-control" rows="2" id="body"></textarea>
+						
+						<label for="body">Product Price :</label>
+						<textarea placeholder="add price " class="form-control" rows="2" id="body"></textarea>-->
+
 						<div class="form-group">
-							<label for="category">Select Product Name:</label>
+							<label for="category">Designed By:</label>
 							<select class="custom-select" id="product">
   						</select>
 						</div>
