--- a/public/product-manager.html
+++ b/public/product-manager.html
@@ -34,10 +34,10 @@
 
 					<form id="product-form">
 						<td colspan="4">
-							<input placeholder="Enter Product Name" id="product-name" type="text" style="margin-bottom: 10px;"/><br>
+							<input placeholder="Enter Designers Name" id="product-name" type="text" style="margin-bottom: 10px;"/><br>
 							<input placeholder="Enter a price" id="price" type="text" style="margin-bottom: 10px;"/><br>
-							<input placeholder="Enter a description" id="description" type="text" style="margin-bottom: 10px;"/><br>
-							<input placeholder="Enter a pic url" id="image" type="url" style="margin-bottom: 10px;"/><br>
+							<input placeholder ="Enter color" id="description" type="text" style="margin-bottom: 10px;"/><br>
+							
 						</td>
 						<td><button type="submit" class="btn btn-success">Create Product</button>
 						</td>
